--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGO_URL="mongodb+srv://pratikjojode2004:pratik2004@cluster0.mubu5fz.mongodb.net/RMS"
+SECRET_KEY_JWT=AMCD123456@346nHF5542489096735FYd%467
