--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "ajv-keywords": "^5.1.0",
     "codegen": "^0.1.0",
     "concurrently": "^9.0.1",
+    "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
