--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "chart.js": "^4.4.4",
     "codegen": "^0.1.0",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.2",
