--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "antd": "^5.21.1",
     "chart.js": "^4.4.4",
     "codegen": "^0.1.0",
     "concurrently": "^9.0.1",
