--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
-    "antd": "^5.21.1",
+    "antd": "^5.21.2",
     "chart.js": "^4.4.4",
     "codegen": "^0.1.0",
     "concurrently": "^9.0.1",
